Update Class.js(record+scoring)-> Class.js+ Scoring.js video element 다음 영상 재생 및 스코어링  기능 마비로 인한 js분류

--- a/mzd/templates/base.html
+++ b/mzd/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', path='/css/button.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}">
     <title>MZTOD</title>
+    <link rel="shortcut icon" href="{{ url_for('static', path='/img/MZtoDfavicon.ico') }}">
 </head>
 
 <body topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0">
