--- a/mzd/templates/class/ClassPage0_1.html
+++ b/mzd/templates/class/ClassPage0_1.html
@@ -27,7 +27,7 @@
             background-size: cover;
         }
         .video1-text{
-            position: abosolute;
+            position: relative;
             display: flex;
             flex-direction: column;
             z-index: 1000;
@@ -36,7 +36,7 @@
             z-index: 1000;
         }
         .video1-button{
-            position: abosolute;
+            position: relative;
             display: flex;
             flex-direction: column;
             z-index: 1000;
@@ -52,7 +52,7 @@
     <!--교육/레이블 영상 Left -->
     <div class="video1" style="float:left; margin-left: 10%;">
         <p style="font-size: 20px;text-align: center;font-weight: bold;">컨텐츠 화면</p>
-        <video id="player"  poster="{{ url_for('static', path='/img/class_poster.jpg') }}" style=" width: 550px; height:435px; object-fit: cover;"  controls>
+        <video id="teachVideo"  poster="{{ url_for('static', path='/img/class_poster.jpg') }}" style=" width: 550px; height:435px; object-fit: cover;"  controls >
             <source src="https://mztod.s3.ap-northeast-2.amazonaws.com/class_LoveDive_0.mp4" type="video/mp4"  >        
             <object id="ie_player" width="600" height="475">
                 <param name="AutoStart" value="true">
@@ -60,9 +60,10 @@
                 <param name="ShowControls" value="true">
             </object>
         </video>
+        <!--
         <br><br>
-        <p style="font-size:20px;font-weight: bold; float:left;">🔺재생 버튼으로 시작하기!</p>
-        <img src="{{url_for('static', path='/img/next_page0.png')}}"style=" width:150px; height:40px; object-fit: cover;margin-left:210px">
+        <p style="font-size:20px;font-weight: bold; float:left;"></p>
+        <img src="{{url_for('static', path='/img/next_page0.png')}}"style=" width:150px; height:40px; object-fit: cover;margin-left:210px"> -->
     </div>
 
     <!--내 화면 Right-->
@@ -72,7 +73,7 @@
         </div> 
         <video id="video-output" style="  width: 550px; height:435px; object-fit: cover;" controls></video>
         <div class="video1-text">
-            <p id="threelist"; class="text-rainbow"style="font-size:35px; font-family: 'NanumSquare', sans-serif; text-align: center; margin-top:-35%; margin-right:15% "></p>
+            <p id="threelist"; class="text-rainbow"style="font-size:35px; font-family: 'NanumSquare', sans-serif; text-align: center; margin-top:-35%; margin-right:23% "></p>
         </div>
         <div class="video1-text">
             <p style="color: rgb(255, 255, 255); margin-top:-12%; font-size: 20px; margin-left:5%">time</p>
@@ -109,14 +110,16 @@
 
         </div>
     </div>
+    <!-- 인스트럭션 화살표, 일단 없애기로 결정.
     <div align:right; style="width:50px; height:50px;text-align:right;object-fit: cover; margin-left:38% ">
         <img src="{{url_for('static', path='/img/down_arrow.png')}}" >
-    </div>
+    </div>-->
 
+    <script type="text/javascript" src="{{url_for('static', path='/js/Class.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', path='/js/stopwatch.js')}}"></script>
 
 </body>
-<script type="text/javascript" src="{{url_for('static', path='/js/Class.js')}}"></script>
-<script type="text/javascript" src="{{url_for('static', path='/js/stopwatch.js')}}"></script>
+
 </html>
 
 {% endblock content %}
