--- a/mzd/templates/class/ClassPage0_2.html
+++ b/mzd/templates/class/ClassPage0_2.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 <head>
-
     <style>
         h3 { text-align: center; }
         #container {
@@ -15,8 +14,6 @@
             background-color: #666;
         }
         h2{ text-align:center; margin-top: 10px; }
-
-        
         .vidoe1{
             position: relative;
             display: flex;
@@ -25,7 +22,7 @@
             background-size: cover;
         }
         .video1-text{
-            position: abosolute;
+            position: relative;
             display: flex;
             flex-direction: column;
             z-index: 1000;
@@ -34,7 +31,7 @@
             z-index: 1000;
         }
         .video1-button{
-            position: abosolute;
+            position: relative;
             display: flex;
             flex-direction: column;
             z-index: 1000;
@@ -81,7 +78,7 @@
 </body>
 
 
-<script type="text/javascript" src="{{url_for('static', path='/js/Class.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', path='/js/Scoring.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', path='/js/stopwatch.js')}}"></script>
 </html>
 
