Final update: co-play label and usr video, scoring video starts with the 스코어링 출력 button

--- a/mzd/templates/class/ClassPage0_2.html
+++ b/mzd/templates/class/ClassPage0_2.html
@@ -51,7 +51,7 @@
 
     <br><br><br>
     <p style="font-size:20px;font-weight: bold;">Step3. 스코어링 결과 확인하기</p>
-    <p style="font-size:15px;font-weight: bold;">-&nbsp;스코어링 출력 버튼 클릭하기</p>
+    <p style="font-size:15px;font-weight: bold;">-&nbsp;스코어링 출력 버튼 클릭!</p>
 
     </div>
     <!--스코어링 영상 -->
@@ -66,11 +66,11 @@
         </div>
         <div class="video-button">
             <span><button id="scoreStart" class="w-btn w-btn-skin">스코어링 출력</button></span>
-            <span><button id="scoreEnd" class="w-btn w-btn-skin">스코어링 중지</button></span>
+            <span><button id="scoreEnd" class="w-btn w-btn-skin" style="display: None;">스코어링 중지</button></span>
         </div>
     </div>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <div style=" text-align:right;"> 
         <p style="font-weight:bold">다음 동작으로 넘어가세요!</p>
         <a href="/classPage0_1" onclick="location.href='ClassPage0_1.html'"><img  src="{{url_for('static', path='/img/next_page0.png')}}" style=" width:200px; height:80px; object-fit: cover;"></a>
