--- a/mzd/templates/indexPage/main.html
+++ b/mzd/templates/indexPage/main.html
@@ -65,10 +65,10 @@
 
 <!--춤추는 여자 설명(오른쪽)-->
 <div class="text"; style="font-size: 25px;">
-    <br><br><br><br>
-    <b>&nbsp;&nbsp;&nbsp;&nbsp;MZtoD는 웹캠으로 사용자의 움직임을 촬영하여 17개의 포인트로 인식하여<br>&nbsp;&nbsp; Pose Estimation을 수행합니다.</b> <br><br>
+    <br>
+    <b>&nbsp;&nbsp;&nbsp;&nbsp;MZtoD는 웹캠으로 촬영한 사용자의 움직임을  17개의 포인트로 <br>&nbsp;&nbsp; 인식하여 Pose Estimation을 수행합니다.</b> <br><br> <br> <br>
     <b>&nbsp;&nbsp;&nbsp;&nbsp;⚫Pose estimation이란?</b> <br>
-    <b>&nbsp;&nbsp;&nbsp;&nbsp; 사진이나 영상 속에서 사람의 신체 관절이 어떻게 구성되어 있는지 컴퓨터가<br>&nbsp;&nbsp; 관절 위치를 추정하여 사용자의 움직임을 포착하는 기법</b> <br><br>
+    <b>&nbsp;&nbsp;&nbsp;&nbsp; 사진이나 영상 속에서 사람의 신체 관절이 어떻게 구성되어 있는지 <br>&nbsp;&nbsp; 컴퓨터가 관절 위치를 추정하여 사용자의 움직임을 포착하는 기법</b> <br><br>
 </div>
 <br><br><br><br><br><br><br><br>
 
@@ -76,20 +76,23 @@
 <img src="{{url_for('static', path='/img/estimated_img.png')}}"  style="width:40%; float:right; margin-right:5% ">
 
 <!--클래스,스코어링 설명(왼쪽))-->
-<div class="text"; style=" font-size: 25px;margin-left:5%">
+<div class="text"; style=" font-size: 25px;margin-left:3%">
     <b style=" font-size: 25px; ">
-        <br><br><br><br><br><br>
-        &nbsp;&nbsp; 웹캠 영상을 초당 10개의 이미지로 분리해 사용자의 동작과 정답 동작의 유사도를<br>&nbsp;  시간 차이를 AI기술로 자동으로 조정하여 점수를 측정합니다. 
         <br><br>
+        &nbsp;<b>⚫Pose Scoring</b> <br>
+        &nbsp; 웹캠 영상을 초당 10개의 이미지로 분리해서 사용자의 동작과<br>&nbsp;&nbsp;정답 동작의 유사도를  AI 기술을 바탕으로 추적하여 점수를 <br>&nbsp; 측정합니다. 
+        <br><br><br><br>
         &nbsp;&nbsp;이제는 AI 모션 인식 기술로 함께 춤춰요~
     </b>
 </div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br>
+
+
 {% if username is defined and username is not none %}
 <div style=" text-align: center;">
     <form action="/classPage0_1" method="GET">
         <button type="submit" class="w-btn w-btn-gra2 w-btn-gra-anim" ; style=" display: inline-block; color:white;">
-            클래스 페이지
+            클래스 페이지 바로가기
         </button>
     </form>
 </div>
@@ -97,7 +100,7 @@
 <div style=" text-align: center;">
     <form action="/signup" method="GET">
         <button type="submit" class="w-btn w-btn-gra2 w-btn-gra-anim" ; style=" display: inline-block; color:white;">
-            회원가입하기
+            회원가입 하러가기
         </button>
     </form>
 </div>
